--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -15,12 +15,13 @@
     <header>
       <div class="header-logo-container">
         <a href="/">
-          <img src="{% static 'images/header-logo.svg' %}" alt="The Cat Collector Logo" />
+            <img src="{% static 'images/header-logo.svg' %}" alt="The Cat Collector Logo" />
         </a>
       </div>
       <nav>
         <ul>
-          <li><a href="/about">About</a></li>
+            <li><a href="/cats">All Cats</a></li>
+            <li><a href="/about">About</a></li>
         </ul>
       </nav>
     </header>
